plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.11-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.hbs'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// SSO 관련 (OAuth2 클라이언트)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT 발급 및 검증 관련
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'         // JWT API (인터페이스)
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'           // JWT 구현체 (서명 생성 및 검증 로직 포함)
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'        // Jackson 기반 JSON 직렬화/역직렬화 지원

	//aws-actuator 로드밸런싱 관련
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Lombok 추가
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// jpa 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.mysql:mysql-connector-j'

	// Excel다운로드를 위한 라이브러리
	implementation 'org.apache.poi:poi-ooxml:5.2.3'
	implementation 'org.apache.poi:poi:5.2.3'

	// Aws s3 파일 관련 의존성 추가
	implementation 'software.amazon.awssdk:s3:2.20.0'
	// Spring Cloud AWS Starter (올바른 artifactId)
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.0.2'
	implementation platform('software.amazon.awssdk:bom:2.20.129') // 버전 통합 관리
	implementation 'software.amazon.awssdk:s3'
	// → 또는 S3 전용만 쓰려면:
	// implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {


	useJUnitPlatform()
}
